sumo/tests/traci/ChangeTLValue/errors/UnsupportedVariable/testclient.prog
simstep 48 1
setvalue 194 255 dummy <string> dummy
simstep 49 1
